2010-04-01 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: fixed memory leak.

2010-03-24  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: fixed Alex's missing paragraph closing tag.
    
2010-03-22  Stipe Tolj  <stolj at kannel.org>
    * VERSION: fix typo and make the rXXXX tag more clean here.
    
2010-03-22 Alexander Malysh <amalysh at kannel.org>
    * configure, VERSION, configure.in, acinclude.m4, aclocal.m4: switched CVS -> SVN

2010-03-20 Alexander Malysh <amalysh at kannel.org>
    * userguide/userguide.xml: applied patch that should clarify modem initialization.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2010-03-20 Alexander Malysh <amalysh at kannel.org>
    * gw/smsbox.c: rewrite of XML POST to use libxml/xpath. This should handle all of
      escaping, namespacing etc. issues.

2010-03-18  Andreas Fink <andreas at fink.org>
    * doc/examples/modems.conf, modems.conf
      fixed default settings for Siemens TC35
      this should make hanging TC35's a thing of the past

2010-03-09  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: we use UTF-8 as default encoding for the
      payload and not WINDOWS-1252. This caused a lot of mis-understanding.
    * gw/smsbox.c: fix also the comment. NLC.

2010-02-28 Alexander Malysh <amalysh at kannel.org>
    * gw/bearerbox.c: don't ignore errors on startup. This fixes #536.

2010-01-21  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_boxc.c: fix a duplicate store_save_ack() call in case we get
      SMSCCONN_FAILED_DISCARDED as result of our smsc routing call. In this
      case we HAVE already called the store_save_ack(), and hence yield an
      ERROR line that we're unable to unlink the file from a spool directory.

2010-01-20  Stipe Tolj  <stolj at kannel.org>
    * utils/start-stop-daemon.c: fix FreeBSD build, removed the redundant
      command here that breaks the build. NLC.

2010-01-19 Andreas Fink <andreas at fink.org>