@@ -1,3 +1,8 @@
+2010-04-12 Alexander Malysh <amalysh at kannel.org>
+    * gw/smsc/smsc_at.c: applied patch that fixes issue when error received
+      during handshake.
+      Thanks to hisham malik <hisham.malik at confiz.com> for this patch.
+
 2010-04-01 Alexander Malysh <amalysh at kannel.org>
     * gwlib/http.c: fixed memory leak.
 
